<?xml version="1.0"?>
<package format="2">
  <name>rt_string_msgs</name>
  <version>0.0.0</version>
  <description>Provides ROS messages for rt_strings.</description>
  <maintainer email="info@intermodalics.eu">Intermodalics BVBA</maintainer>

  <license>LGPL / BSD</license>

  <author email="luca@intermodalics.eu">Luca Magnabosco</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>rtt_roscomm</depend>
  <depend>std_msgs</depend>

  <test_depend>roscpp_serialization</test_depend>
  <test_depend>roscpp_traits</test_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_roscomm</plugin_depend>
    </rtt_ros>
  </export>

</package>
